--- a/options/test/test.yml
+++ b/options/test/test.yml
@@ -1,33 +1,20 @@
 
 #### general settings
 
-name: CSNorm_log
+name: test
 use_tb_logger: False
 model: CSNorm
+scale: 2
 gpu_ids: [0]
 
 #### datasets
 
 datasets:
-  train:
-    name: data_train
-    mode: JSH_train
-    dataroot_gt: 'TRAINDATA/GT' # path to training Clean images
-    dataroot_lq: 'TRAINDATA/LQ' # path to training Noisy images
-
-    use_shuffle: true
-    n_workers: 4  # per GPU
-    batch_size: 4
-    GT_size: 256
-    use_flip: true
-    use_rot: true
-    color: RGB
-
   val:
     name: data_val
     mode: JSH_val
-    dataroot_gt: '.VALIDATA/GT' # path to validation Clean images
-    dataroot_lq: '.VALIDATA/LQ' # path to validation Noisy images
+    dataroot_gt: 'TESTDATA/GT' # path to validation Clean images
+    dataroot_lq: 'TESTDATA/LQ' # path to validation Noisy images
 
 #### network structures
 
@@ -45,7 +32,7 @@ network_G:
 
 path:
   root: ./
-  pretrain_model_G:
+  pretrain_model_G: ./NAF_LOL.pth
   strict_load: true
   resume_state: ~
 
@@ -53,23 +40,23 @@ path:
 #### training settings: learning rate scheme, loss
 
 train:
-  lr_G: !!float 2e-4
+  lr_G: !!float 1e-4
   beta1: 0.9
   beta2: 0.999
   niter: 600000
   warmup_iter: -1  # no warm up
 
   lr_scheme: MultiStepLR
-  lr_steps: [50000, 80000, 100000, 200000, 500000]
+  lr_steps: [5000, 10000, 15000, 30000, 500000]
   lr_gamma: 0.5
 
   pixel_criterion_forw: l2
-  pixel_criterion_back: l2
+  pixel_criterion_back: l1
   pixel_criterion_hist: l2
 
   manual_seed: 9
 
-  val_freq: !!float 100
+  val_freq: !!float 2000
 
   vgg16_model:
 
@@ -89,5 +76,5 @@ train:
 #### logger
 
 logger:
-  print_freq: 40
+  print_freq: 500
   save_checkpoint_freq: !!float 5000
